--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@ form{
 }
 
 #advanced_search,
-#image_search {
+#image_search,
+#google_search{
   position: fixed;
   text-decoration: none;
   color: #333; /* Adjust the color as needed */
@@ -22,4 +23,29 @@ form{
 #image_search {
   top: 10px;
   right: 10px;
+}
+
+#google_search{
+    top: 10px;
+    right: 10px;
+}
+
+#query{
+    width: 400px;
+    height: 20px;
+    font-size: 20px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+}
+
+#submit{
+    
+}
+
+#search_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
