Add hyperlink to entry in index.html

--- a/project_1/wiki/encyclopedia/templates/encyclopedia/index.html
+++ b/project_1/wiki/encyclopedia/templates/encyclopedia/index.html
@@ -9,7 +9,7 @@
 
     <ul>
         {% for entry in entries %}
-            <li>{{ entry }}</li>
+            <a href="http://127.0.0.1:8000/wiki/{{ entry }}"><li>{{ entry }}</li></a>
         {% endfor %}
     </ul>
 
