Add random page functionality to layout.html and views.py

--- a/project_1/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/project_1/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -23,7 +23,7 @@
                     Create New Page
                 </div>
                 <div>
-                    Random Page
+                    <a href="{% url 'random_page' %}">Random page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
