Add new files and templates for auctions app

--- a/project_1/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/project_1/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -25,6 +25,9 @@
                 <div>
                     <a href="{% url 'random_page' %}">Random page</a>
                 </div>
+                {% comment %} <div>
+                    <a href="{% url 'edit_page' %}">Edit page</a>
+                </div>     {% endcomment %}
                 {% block nav %}
                 {% endblock %}
             </div>
